move_semantics5/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check)
error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> src/lib.rs:14:13
   |
13 |     let y = &mut x;
   |             ------ first mutable borrow occurs here
14 |     let z = &mut x;
   |             ^^^^^^ second mutable borrow occurs here
15 |     *y += 100;
   |     --------- first borrow later used here

For more information about this error, try `rustc --explain E0499`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
